--- a/resume.html
+++ b/resume.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="/dist/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="/dist/line-awesome-1.3.0/1.3.0/css/line-awesome.min.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="line-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/dist/aos-master/dist/aos.css">
-    <link rel="stylesheet" href="/dist/css/resume.css">
+    <link rel="stylesheet" href="aos.css">
+    <link rel="stylesheet" href="resume.css">
     <title>Resume</title>
 </head>
 <body class="d-flex flex-column h-100">
@@ -120,11 +120,11 @@
        
 </body>
 
-<script src="/dist/aos-master/dist/aos.js"></script>
+<script src="aos.js"></script>
               <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
               <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-              <script src="/bootstrap-4.5.3-dist/js/bootstrap.js"></script> 
-              <script src="/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.js"></script> 
+              <script src="bootstrap.js"></script> 
+              <script src="bootstrap.js"></script> 
        
 <script src="/dist/js/scripts.js"></script>
 </html>
