--- a/resume.html
+++ b/resume.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="line-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="aos.css">
-    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="/css/resume.css">
     <title>Resume</title>
 </head>
 <body class="d-flex flex-column h-100">
