--- a/resume.html
+++ b/resume.html
@@ -126,5 +126,5 @@
               <script src="bootstrap.js"></script> 
               <script src="bootstrap.js"></script> 
        
-<script src="/dist/js/scripts.js"></script>
+<script src="/js/scripts.js"></script>
 </html>
