--- a/projects.html
+++ b/projects.html
@@ -15,12 +15,12 @@
         <!-- Bootstrap icons-->
         <title>Rey Portfolio</title>
         <link rel="stylesheet" href="/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/css/bootstrap.css">
-        <link rel="stylesheet" href="/line-awesome-1.3.0/1.3.0/css/line-awesome.min.css">
-        <link rel="stylesheet" href="/line-awesome-1.3.0/1.3.0/css/line-awesome.css">
-        <link rel="stylesheet" href="/aos-master/dist/aos.css">
+        <link rel="stylesheet" href="line-awesome.min.css">
+        <link rel="stylesheet" href="line-awesome.css">
+        <link rel="stylesheet" href="aos.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/project.css" rel="stylesheet" />
+        <link href="/css/project.css" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -146,8 +146,8 @@
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script src="/bootstrap-4.5.3-dist/js/bootstrap.js"></script> 
-        <script src="/bootstrap-5.3.3-dist/bootstrap-5.3.3-dist/js/bootstrap.js"></script> 
-        <script src="/aos-master/dist/aos.js"></script>
+        <script src="bootstrap.js"></script> 
+        <script src="aos.js"></script>
                      
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
