--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/line-awesome-1.3.0/1.3.0/css/line-awesome.css">
     <link rel="stylesheet" href="/dist/aos-master/dist/aos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="css/contact.css">
     <title>Contact</title>
 </head>
 <body class="d-flex flex-column h-100 section1">
