--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
                                     <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html" data-aos="fade-right" data-aos-delay="300">Resume</a>
                                     <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html" data-aos="fade-left" data-aos-delay="300">Projects</a>
                                 </div>
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col">
+                                            <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html" data-aos="fade-right" data-aos-delay="300">Resume</a>
+                                            <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="projects.html" data-aos="fade-left" data-aos-delay="300">Projects</a>
+        
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="col-xxl-7">
