--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <div class="fs-3 fw-light text-muted " >Portfolio for Future Endeavor</div>
                                 <h1 class="display-3 fw-bolder mb-5" data-aos="fade-top" data-aos-delay="300"><span class="text-gradient d-inline">Aspiring Web and App Developer</span></h1>
                                
-                                <div class="container">
+                                <div class="container justify-content-center">
                                     <div class="row">
                                         <div class="col">
                                             <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="resume.html" data-aos="fade-right" data-aos-delay="300">Resume</a>
